--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="/src/app.css">
 		
-		<link rel="modulepreload" href="/character-counter/_app/immutable/entry/start.CGur0Wd6.js">
-		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/Bpy9fTKD.js">
+		<link rel="modulepreload" href="/character-counter/_app/immutable/entry/start.D19U5lQH.js">
+		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/CnPk5UGt.js">
 		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/Cs4dM2UP.js">
 		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/OtDKdtjZ.js">
 		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/Dn6vCkPf.js">
 		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/BsRqCZaE.js">
-		<link rel="modulepreload" href="/character-counter/_app/immutable/entry/app.CwU28NvY.js">
+		<link rel="modulepreload" href="/character-counter/_app/immutable/entry/app.DyVKPJ4f.js">
 		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/DsnmJJEf.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1ux065z = {
+					__sveltekit_hmzlh6 = {
 						base: "/character-counter",
 						assets: "/character-counter"
 					};
@@ -26,8 +26,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/character-counter/_app/immutable/entry/start.CGur0Wd6.js"),
-						import("/character-counter/_app/immutable/entry/app.CwU28NvY.js")
+						import("/character-counter/_app/immutable/entry/start.D19U5lQH.js"),
+						import("/character-counter/_app/immutable/entry/app.DyVKPJ4f.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
