--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="/src/app.css">
 		
-		<link rel="modulepreload" href="/character-counter/_app/immutable/entry/start.DPRKnKE6.js">
-		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/BZBokEZU.js">
+		<link rel="modulepreload" href="/character-counter/_app/immutable/entry/start.DU4-t1TP.js">
+		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/XYF03rwD.js">
 		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/B-LSUGr7.js">
 		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/CXIzjVxF.js">
 		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/Cd-z9W_8.js">
 		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/DBAmqJIj.js">
-		<link rel="modulepreload" href="/character-counter/_app/immutable/entry/app.Cu7-3u_S.js">
+		<link rel="modulepreload" href="/character-counter/_app/immutable/entry/app.Dw6M9HXN.js">
 		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/DsnmJJEf.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_26nl6a = {
+					__sveltekit_12u9x3k = {
 						base: "/character-counter",
 						assets: "/character-counter"
 					};
@@ -26,8 +26,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/character-counter/_app/immutable/entry/start.DPRKnKE6.js"),
-						import("/character-counter/_app/immutable/entry/app.Cu7-3u_S.js")
+						import("/character-counter/_app/immutable/entry/start.DU4-t1TP.js"),
+						import("/character-counter/_app/immutable/entry/app.Dw6M9HXN.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
