--- a/index.html
+++ b/index.html
@@ -3,22 +3,21 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="/src/app.css">
 		
-		<link rel="modulepreload" href="/character-counter/_app/immutable/entry/start.DU4-t1TP.js">
-		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/XYF03rwD.js">
-		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/B-LSUGr7.js">
-		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/CXIzjVxF.js">
-		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/Cd-z9W_8.js">
-		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/DBAmqJIj.js">
-		<link rel="modulepreload" href="/character-counter/_app/immutable/entry/app.Dw6M9HXN.js">
+		<link rel="modulepreload" href="/character-counter/_app/immutable/entry/start.DL1_HhKN.js">
+		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/CXHxznqD.js">
+		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/CLukUyGt.js">
+		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/ClB8Zq_p.js">
+		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/CBxkJK7o.js">
+		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/CSC9tRK_.js">
+		<link rel="modulepreload" href="/character-counter/_app/immutable/entry/app.pX5V86Sz.js">
 		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/DsnmJJEf.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_12u9x3k = {
+					__sveltekit_1g6veil = {
 						base: "/character-counter",
 						assets: "/character-counter"
 					};
@@ -26,8 +25,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/character-counter/_app/immutable/entry/start.DU4-t1TP.js"),
-						import("/character-counter/_app/immutable/entry/app.Dw6M9HXN.js")
+						import("/character-counter/_app/immutable/entry/start.DL1_HhKN.js"),
+						import("/character-counter/_app/immutable/entry/app.pX5V86Sz.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
