--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/character-counter/_app/immutable/entry/start.DL1_HhKN.js">
-		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/CXHxznqD.js">
+		<link rel="modulepreload" href="/character-counter/_app/immutable/entry/start.BKfVyw-K.js">
+		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/CLeXh8jF.js">
 		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/CLukUyGt.js">
 		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/ClB8Zq_p.js">
 		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/CBxkJK7o.js">
 		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/CSC9tRK_.js">
-		<link rel="modulepreload" href="/character-counter/_app/immutable/entry/app.pX5V86Sz.js">
+		<link rel="modulepreload" href="/character-counter/_app/immutable/entry/app.CpCUD6YO.js">
 		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/DsnmJJEf.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1g6veil = {
+					__sveltekit_1db0mgq = {
 						base: "/character-counter",
 						assets: "/character-counter"
 					};
@@ -25,8 +25,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/character-counter/_app/immutable/entry/start.DL1_HhKN.js"),
-						import("/character-counter/_app/immutable/entry/app.pX5V86Sz.js")
+						import("/character-counter/_app/immutable/entry/start.BKfVyw-K.js"),
+						import("/character-counter/_app/immutable/entry/app.CpCUD6YO.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
