--- a/index.html
+++ b/index.html
@@ -4,29 +4,29 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/character-counter/_app/immutable/entry/start.BKfVyw-K.js">
-		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/CLeXh8jF.js">
-		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/CLukUyGt.js">
-		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/ClB8Zq_p.js">
-		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/CBxkJK7o.js">
-		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/CSC9tRK_.js">
-		<link rel="modulepreload" href="/character-counter/_app/immutable/entry/app.CpCUD6YO.js">
-		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/DsnmJJEf.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.-ArdtFp4.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/CSIF8k3R.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BoAvvzwP.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DsOASpPu.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BiMAEsFB.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/fsPIADeW.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/B9D63-IO.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.DWZzIUUB.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DsnmJJEf.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1db0mgq = {
-						base: "/character-counter",
-						assets: "/character-counter"
+					__sveltekit_yvi4fm = {
+						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/character-counter/_app/immutable/entry/start.BKfVyw-K.js"),
-						import("/character-counter/_app/immutable/entry/app.CpCUD6YO.js")
+						import("/_app/immutable/entry/start.-ArdtFp4.js"),
+						import("/_app/immutable/entry/app.DWZzIUUB.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
