--- a/index.html
+++ b/index.html
@@ -4,29 +4,30 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.-ArdtFp4.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/CSIF8k3R.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BoAvvzwP.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DsOASpPu.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BiMAEsFB.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/fsPIADeW.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/B9D63-IO.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.DWZzIUUB.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DsnmJJEf.js">
+		<link rel="modulepreload" href="/character-counter/_app/immutable/entry/start.DElEP-9K.js">
+		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/35TY9sss.js">
+		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/BoAvvzwP.js">
+		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/DsOASpPu.js">
+		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/BiMAEsFB.js">
+		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/fsPIADeW.js">
+		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/wZOLRZC3.js">
+		<link rel="modulepreload" href="/character-counter/_app/immutable/entry/app.DR60Sn-K.js">
+		<link rel="modulepreload" href="/character-counter/_app/immutable/chunks/DsnmJJEf.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_yvi4fm = {
-						base: ""
+					__sveltekit_19ltgre = {
+						base: "/character-counter",
+						assets: "/character-counter"
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.-ArdtFp4.js"),
-						import("/_app/immutable/entry/app.DWZzIUUB.js")
+						import("/character-counter/_app/immutable/entry/start.DElEP-9K.js"),
+						import("/character-counter/_app/immutable/entry/app.DR60Sn-K.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
